using the word template

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,15 @@
 % Encoding: UTF-8
+@ARTICLE{sandhu1994, 
+author={R. S. {Sandhu} and P. {Samarati}}, 
+journal={IEEE Communications Magazine}, 
+title={Access control: principle and practice}, 
+year={1994}, 
+volume={32}, 
+number={9}, 
+pages={40-48}, 
+doi={10.1109/35.312842}, 
+ISSN={0163-6804}, 
+month={Sep.},}
 
 @Article{lampson1974,
   author     = {Lampson, Butler W.},
