add code  and add some sections to the paper

--- a/references.bib
+++ b/references.bib
@@ -1,220 +1,255 @@
 % Encoding: UTF-8
-@article{ding2019,
-  author    = {Hongfa Ding and
-               Changgen Peng and
-               Youliang Tian and
-               Shuwen Xiang},
-  title     = {A risk adaptive access control model based on Markov for big data
-               in the cloud},
-  journal   = {International Journal of High Performance Computing and Networking},
-  volume    = {13},
-  number    = {4},
-  pages     = {464--475},
-  year      = {2019},
-  url       = {https://doi.org/10.1504/IJHPCN.2019.099269},
-  doi       = {10.1504/IJHPCN.2019.099269},
+
+@article{newton18,
+  author    = {Jonathan Newton},
+  title     = {Evolutionary Game Theory: {A} Renaissance},
+  journal   = {Games},
+  volume    = {9},
+  number    = {2},
+  pages     = {31},
+  year      = {2018},
+% url       = {https://doi.org/10.3390/g9020031},
+% doi       = {10.3390/g9020031},
 }
 
-@article{dossantos2016,
- author = {dos Santos, Daniel Ricardo and Marinho, Roberto and Schmitt, Gustavo Roecker and Westphall, Carla Merkle and Westphall, Carlos Becker},
- title = {A Framework and Risk Assessment Approaches for Risk-based Access Control in the Cloud},
- journal = {J. Netw. Comput. Appl.},
- issue_date = {October 2016},
- volume = {74},
- number = {C},
- month = oct,
- year = {2016},
- issn = {1084-8045},
- pages = {86--97},
- numpages = {12},
- doi = {10.1016/j.jnca.2016.08.013},
- acmid = {3005796},
- publisher = {Academic Press Ltd.},
- address = {London, UK, UK},
- keywords = {Access control, Cloud computing, Risk},
-}
-
-@INPROCEEDINGS{downs1985, 
-author={D. D. {Downs} and J. R. {Rub} and K. C. {Kung} and C. S. {Jordan}}, 
-booktitle={1985 IEEE Symposium on Security and Privacy}, 
-title={Issues in Discretionary Access Control}, 
-year={1985}, 
-volume={}, 
-number={}, 
-pages={208-208}, 
-doi={10.1109/SP.1985.10014}, 
-ISSN={1540-7993}, 
-month={April},}
-
-@INPROCEEDINGS{mccune2006, 
-author={J. M. {McCune} and T. {Jaeger} and S. {Berger} and R. {Caceres} and R. {Sailer}}, 
-booktitle={2006 22nd Annual Computer Security Applications Conference (ACSAC'06)}, 
-title={Shamon: A System for Distributed Mandatory Access Control}, 
-year={2006}, 
-volume={}, 
-number={}, 
-pages={23-32}, 
-doi={10.1109/ACSAC.2006.47}, 
-ISSN={1063-9527}, 
-month={Dec},}
-
-@article{diazlopez2016,
- author = {Diaz-Lopez, Daniel and Dolera-Tormo, Gines and Gomez-Marmol, Felix and Martinez-Perez, Gregorio},
- title = {Dynamic Counter-measures for Risk-based Access Control Systems},
- journal = {Future Gener. Comput. Syst.},
- issue_date = {February 2016},
- volume = {55},
- number = {C},
- month = feb,
- year = {2016},
- issn = {0167-739X},
- pages = {321--335},
- numpages = {15},
- url = {https://doi.org/10.1016/j.future.2014.10.012},
- doi = {10.1016/j.future.2014.10.012},
- acmid = {2870028},
- publisher = {Elsevier Science Publishers B. V.},
- address = {Amsterdam, The Netherlands, The Netherlands},
- keywords = {Access control systems, Counter-measures, Genetic algorithms, ISMS, ISO 27001, Risk management},
-} 
-
-
-@inproceedings{armando2015b,
- author = {Armando, Alessandro and Bezzi, Michele and Cerbo, Francesco and Metoui, Nadia},
- title = {Balancing Trust and Risk in Access Control},
- booktitle = {Proceedings of the Confederated International Conferences on On the Move to Meaningful Internet Systems: OTM 2015 Conferences - Volume 9415},
- year = {2015},
- isbn = {978-3-319-26147-8},
- pages = {660--676},
- numpages = {17},
- url = {https://doi.org/10.1007/978-3-319-26148-5_45},
- doi = {10.1007/978-3-319-26148-5_45},
- acmid = {2966705},
- publisher = {Springer-Verlag},
- address = {Berlin, Heidelberg},
- keywords = {Privacy, Risk, Trust},
-} 
-
-@article{armando2015,
- author = {Armando, Alessandro and Bezzi, Michele and Metoui, Nadia and Sabetta, Antonino},
- title = {Risk-Based Privacy-Aware Information Disclosure},
- journal = {International Journal of Secure Software Engineering},
- issue_date = {April 2015},
- volume = {6},
- number = {2},
- month = apr,
- year = {2015},
- issn = {1947-3036},
- pages = {70--89},
- numpages = {20},
- url = {http://dx.doi.org/10.4018/IJSSE.2015040104},
- doi = {10.4018/IJSSE.2015040104},
- acmid = {2820357},
- publisher = {IGI Global},
- address = {Hershey, PA, USA},
- keywords = {Adult Data Set, Anonymization, Data, Risk, Risk-Aware Access Control Systems, UCI Machine Learning Repository},
-} 
-
-
-@article{khambhammettu2013,
- author = {Khambhammettu, Hemanth and Boulares, Sofiene and Adi, Kamel and Logrippo, Luigi},
- title = {A Framework for Risk Assessment in Access Control Systems},
- journal = {Computer Security},
- issue_date = {November, 2013},
- volume = {39},
- month = nov,
- year = {2013},
- issn = {0167-4048},
- pages = {86--103},
- numpages = {18},
- url = {http://dx.doi.org/10.1016/j.cose.2013.03.010},
- doi = {10.1016/j.cose.2013.03.010},
- acmid = {2622850},
- publisher = {Elsevier Advanced Technology Publications},
- address = {Oxford, UK, UK},
- keywords = {Access control, Impact, Risk, Security, Threat},
-} 
-@article{shaikh2012,
- author = {Shaikh, Riaz Ahmed and Adi, Kamel and Logrippo, Luigi},
- title = {Dynamic Risk-based Decision Methods for Access Control Systems},
- journal = {Computer Security},
- issue_date = {June, 2012},
- volume = {31},
+@article{csiszar2004,
+ author = {Csisz\'{a}r, Imre and Shields, Paul C.},
+ title = {Information Theory and Statistics: A Tutorial},
+ journal = {Communications and Information Theory},
+ issue_date = {December 2004},
+ volume = {1},
  number = {4},
- month = jun,
- year = {2012},
- issn = {0167-4048},
- pages = {447--464},
- numpages = {18},
- url = {http://dx.doi.org/10.1016/j.cose.2012.02.006},
- doi = {10.1016/j.cose.2012.02.006},
- acmid = {2623000},
- publisher = {Elsevier Advanced Technology Publications},
- address = {Oxford, UK, UK},
- keywords = {Access control, Policy, Risk, Security, Trust},
+ month = dec,
+ year = {2004},
+ issn = {1567-2190},
+ pages = {417--528},
+ numpages = {112},
+% url = {http://dx.doi.org/10.1561/0100000004},
+% doi = {10.1561/0100000004},
+ acmid = {1166380},
+ publisher = {Now Publishers Inc.},
+ address = {Hanover, MA, USA},
 } 
+
+@article{shannon1948,
+ author = {Shannon, C. E.},
+ title = {A Mathematical Theory of Communication},
+ journal = {Bell System Technical Journal},
+ issue_date = {},
+ volume = {27},
+ number = {},
+ month = jan,
+ year = {1948},
+ issn = {},
+ pages = {379--423},
+
+} 
+
+
+@Article{ding2019,
+  author  = {Hongfa Ding and Changgen Peng and Youliang Tian and Shuwen Xiang},
+  title   = {A risk adaptive access control model based on Markov for big data in the cloud},
+  journal = {International Journal of High Performance Computing and Networking},
+  year    = {2019},
+  volume  = {13},
+  number  = {4},
+  pages   = {464--475},
+%  doi     = {10.1504/IJHPCN.2019.099269},
+%  url     = {https://doi.org/10.1504/IJHPCN.2019.099269},
+}
+
+@Article{dossantos2016,
+  author     = {dos Santos, Daniel Ricardo and Marinho, Roberto and Schmitt, Gustavo Roecker and Westphall, Carla Merkle and Westphall, Carlos Becker},
+  title      = {A Framework and Risk Assessment Approaches for Risk-based Access Control in the Cloud},
+  journal    = {Journal of Network and Computer Applications},
+  year       = {2016},
+  volume     = {74},
+  number     = {C},
+  pages      = {86--97},
+  month      = oct,
+  issn       = {1084-8045},
+  acmid      = {3005796},
+  address    = {London, UK, UK},
+%  doi        = {10.1016/j.jnca.2016.08.013},
+  issue_date = {October 2016},
+  keywords   = {Access control, Cloud computing, Risk},
+  numpages   = {12},
+  publisher  = {Academic Press Ltd.},
+}
+
+@InProceedings{downs1985,
+  author    = {D. D. {Downs} and J. R. {Rub} and K. C. {Kung} and C. S. {Jordan}},
+  title     = {Issues in Discretionary Access Control},
+  booktitle = {1985 IEEE Symposium on Security and Privacy},
+  year      = {1985},
+  pages     = {208-208},
+  month     = {April},
+ % doi       = {10.1109/SP.1985.10014},
+  issn      = {1540-7993},
+}
+
+@InProceedings{mccune2006,
+  author    = {J. M. {McCune} and T. {Jaeger} and S. {Berger} and R. {Caceres} and R. {Sailer}},
+  title     = {Shamon: A System for Distributed Mandatory Access Control},
+  booktitle = {2006 22nd Annual Computer Security Applications Conference (ACSAC'06)},
+  year      = {2006},
+  pages     = {23-32},
+  month     = {Dec},
+ % doi       = {10.1109/ACSAC.2006.47},
+  issn      = {1063-9527},
+}
+
+@Article{diazlopez2016,
+  author     = {Diaz-Lopez, Daniel and Dolera-Tormo, Gines and Gomez-Marmol, Felix and Martinez-Perez, Gregorio},
+  title      = {Dynamic Counter-measures for Risk-based Access Control Systems},
+  journal    = {Future Generation Computer Systems},
+  year       = {2016},
+  volume     = {55},
+  number     = {C},
+  pages      = {321--335},
+  month      = feb,
+  issn       = {0167-739X},
+  acmid      = {2870028},
+  address    = {Amsterdam, The Netherlands, The Netherlands},
+%  doi        = {10.1016/j.future.2014.10.012},
+  issue_date = {February 2016},
+  keywords   = {Access control systems, Counter-measures, Genetic algorithms, ISMS, ISO 27001, Risk management},
+  numpages   = {15},
+  publisher  = {Elsevier Science Publishers B. V.},
+%  url        = {https://doi.org/10.1016/j.future.2014.10.012},
+}
+
+@InProceedings{armando2015b,
+  author    = {Armando, Alessandro and Bezzi, Michele and Cerbo, Francesco and Metoui, Nadia},
+  title     = {Balancing Trust and Risk in Access Control},
+  booktitle = {Proceedings of the Confederated International Conferences on On the Move to Meaningful Internet Systems: OTM 2015 Conferences - Volume 9415},
+  year      = {2015},
+  pages     = {660--676},
+  address   = {Berlin, Heidelberg},
+  publisher = {Springer-Verlag},
+  acmid     = {2966705},
+%  doi       = {10.1007/978-3-319-26148-5_45},
+  isbn      = {978-3-319-26147-8},
+  keywords  = {Privacy, Risk, Trust},
+  numpages  = {17},
+%  url       = {https://doi.org/10.1007/978-3-319-26148-5_45},
+}
+
+@Article{armando2015,
+  author     = {Armando, Alessandro and Bezzi, Michele and Metoui, Nadia and Sabetta, Antonino},
+  title      = {Risk-Based Privacy-Aware Information Disclosure},
+  journal    = {International Journal of Secure Software Engineering},
+  year       = {2015},
+  volume     = {6},
+  number     = {2},
+  pages      = {70--89},
+  month      = apr,
+  issn       = {1947-3036},
+  acmid      = {2820357},
+  address    = {Hershey, PA, USA},
+%  doi        = {10.4018/IJSSE.2015040104},
+  issue_date = {April 2015},
+  keywords   = {Adult Data Set, Anonymization, Data, Risk, Risk-Aware Access Control Systems, UCI Machine Learning Repository},
+  numpages   = {20},
+  publisher  = {IGI Global},
+%  url        = {http://dx.doi.org/10.4018/IJSSE.2015040104},
+}
+
+@Article{khambhammettu2013,
+  author     = {Khambhammettu, Hemanth and Boulares, Sofiene and Adi, Kamel and Logrippo, Luigi},
+  title      = {A Framework for Risk Assessment in Access Control Systems},
+  journal    = {Computer Security},
+  year       = {2013},
+  volume     = {39},
+  pages      = {86--103},
+  month      = nov,
+  issn       = {0167-4048},
+  acmid      = {2622850},
+  address    = {Oxford, UK, UK},
+%  doi        = {10.1016/j.cose.2013.03.010},
+  issue_date = {November, 2013},
+  keywords   = {Access control, Impact, Risk, Security, Threat},
+  numpages   = {18},
+  publisher  = {Elsevier Advanced Technology Publications},
+%  url        = {http://dx.doi.org/10.1016/j.cose.2013.03.010},
+}
+
+@Article{shaikh2012,
+  author     = {Shaikh, Riaz Ahmed and Adi, Kamel and Logrippo, Luigi},
+  title      = {Dynamic Risk-based Decision Methods for Access Control Systems},
+  journal    = {Computer Security},
+  year       = {2012},
+  volume     = {31},
+  number     = {4},
+  pages      = {447--464},
+  month      = jun,
+  issn       = {0167-4048},
+  acmid      = {2623000},
+  address    = {Oxford, UK, UK},
+%  doi        = {10.1016/j.cose.2012.02.006},
+  issue_date = {June, 2012},
+  keywords   = {Access control, Policy, Risk, Security, Trust},
+  numpages   = {18},
+  publisher  = {Elsevier Advanced Technology Publications},
+%  url        = {http://dx.doi.org/10.1016/j.cose.2012.02.006},
+}
 
 @Article{hui2015,
-  author  = {惠榛 and 李昊 and 张敏 and 冯登国},
-  title   = {面向医疗大数据的风险自适应的访问控制模型},
-  journal = {通信学报},
+  author  = {Hui Zhen and Li Hao and Zhang Min and Feng Deng-guo},
+  title   = {Risk-adaptive access control model for big data in healthcare},
+  journal = {Journal on Communications},
   year    = {2015},
   volume  = {36},
   number  = {12},
-  pages   = {190-199.},
-  doi     = {},
+  pages   = {190-199},
+ % doi     = {10.11959/j.issn.1000-436x.2015328},
+}
+
+@Article{li2017,
+  author  = {Li Hao and Zhang Min and Feng Deng-guo and Hui Zhen},
+  title   = {Research on Access Control of Big Data},
+  journal = {Chinese Journal of Computers},
+  year    = {2017},
+  volume  = {40},
+  number  = {1},
+  pages   = {72-91},
+%  doi     = {10.11897/SP.J.1016.2017.00072},
 }
 
 @InProceedings{boulares2016,
-author="Boulares, Sofiene
-and Adi, Kamel
-and Logrippo, Luigi",
-editor="Cuppens, Fr{\'e}d{\'e}ric
-and Wang, Lingyu
-and Cuppens-Boulahia, Nora
-and Tawbi, Nadia
-and Garcia-Alfaro, Joaquin",
-title="Insider Threat Likelihood Assessment for Access Control Systems: Quantitative Approach",
-booktitle="Foundations and Practice of Security",
-year="2017",
-publisher="Springer International Publishing",
-address="Cham",
-pages="135--142",
-isbn="978-3-319-51966-1"
+  author    = {Boulares, Sofiene and Adi, Kamel and Logrippo, Luigi},
+  title     = {Insider Threat Likelihood Assessment for Access Control Systems: Quantitative Approach},
+  booktitle = {Foundations and Practice of Security},
+  year      = {2017},
+  editor    = {Cuppens, Fr{\'e}d{\'e}ric and Wang, Lingyu and Cuppens-Boulahia, Nora and Tawbi, Nadia and Garcia-Alfaro, Joaquin},
+  pages     = {135--142},
+  address   = {Cham},
+  publisher = {Springer International Publishing},
+  isbn      = {978-3-319-51966-1},
 }
 
 @InProceedings{krautsevich2014,
-author="Krautsevich, Leanid
-and Lazouski, Aliaksandr
-and Martinelli, Fabio
-and Yautsiukhin, Artsiom",
-editor="Bauer, Thomas
-and Gro{\ss}mann, J{\"u}rgen
-and Seehusen, Fredrik
-and St{\o}len, Ketil
-and Wendland, Marc-Florian",
-title="Towards Attribute-Based Access Control Policy Engineering Using Risk",
-booktitle="Risk Assessment and Risk-Driven Testing",
-year="2014",
-publisher="Springer International Publishing",
-address="Cham",
-pages="80--90",
-isbn="978-3-319-07076-6"
+  author    = {Krautsevich, Leanid and Lazouski, Aliaksandr and Martinelli, Fabio and Yautsiukhin, Artsiom},
+  title     = {Towards Attribute-Based Access Control Policy Engineering Using Risk},
+  booktitle = {Risk Assessment and Risk-Driven Testing},
+  year      = {2014},
+  editor    = {Bauer, Thomas and Gro{\ss}mann, J{\"u}rgen and Seehusen, Fredrik and St{\o}len, Ketil and Wendland, Marc-Florian},
+  pages     = {80--90},
+  address   = {Cham},
+  publisher = {Springer International Publishing},
+  isbn      = {978-3-319-07076-6},
 }
-@inproceedings{wang2010,
-  author    = {Guojun Wang and
-               Qin Liu and
-               Jie Wu},
-  title     = {Hierarchical attribute-based encryption for fine-grained access control
-               in cloud storage services},
-  booktitle = {Proceedings of the 17th {ACM} Conference on Computer and Communications
-               Security, {CCS} 2010, Chicago, Illinois, USA, October 4-8, 2010},
-  pages     = {735--737},
+
+@InProceedings{wang2010,
+  author    = {Guojun Wang and Qin Liu and Jie Wu},
+  title     = {Hierarchical attribute-based encryption for fine-grained access control in cloud storage services},
+  booktitle = {Proceedings of the 17th {ACM} Conference on Computer and Communications Security, {CCS} 2010, Chicago, Illinois, USA, October 4-8, 2010},
   year      = {2010},
-  url       = {https://doi.org/10.1145/1866307.1866414},
-  doi       = {10.1145/1866307.1866414},
+  pages     = {735--737},
+%  doi       = {10.1145/1866307.1866414},
+%  url       = {https://doi.org/10.1145/1866307.1866414},
 }
-@proceedings{DBLP:conf/c
+
 @Article{sandhu1994,
   author  = {R. S. {Sandhu} and P. {Samarati}},
   title   = {Access control: principle and practice},
@@ -225,7 +260,7 @@ isbn="978-3-319-07076-6"
   pages   = {40-48},
   month   = {Sep.},
   issn    = {0163-6804},
-  doi     = {10.1109/35.312842},
+ % doi     = {10.1109/35.312842},
 }
 
 @Article{lampson1974,
@@ -240,7 +275,7 @@ isbn="978-3-319-07076-6"
   issn       = {0163-5980},
   acmid      = {775268},
   address    = {New York, NY, USA},
-  doi        = {10.1145/775265.775268},
+%  doi        = {10.1145/775265.775268},
   issue_date = {January 1974},
   numpages   = {7},
   publisher  = {ACM},
@@ -251,7 +286,7 @@ isbn="978-3-319-07076-6"
   title       = {Secure computer systems: Mathematical foundations},
   institution = {Miter Corp Bedford Ma},
   year        = {1973},
-  url         = {www-personal.umich.edu/~cja/LPS12b/refs/belllapadula1.pdf},
+%  url         = {www-personal.umich.edu/~cja/LPS12b/refs/belllapadula1.pdf},
 }
 
 @Article{sandhu1996,
@@ -264,7 +299,7 @@ isbn="978-3-319-07076-6"
   pages   = {38-47},
   month   = {Feb},
   issn    = {0018-9162},
-  doi     = {10.1109/2.485845},
+%  doi     = {10.1109/2.485845},
 }
 
 @InProceedings{pimlott2006,
@@ -304,7 +339,7 @@ isbn="978-3-319-07076-6"
   acmid      = {3007204},
   address    = {New York, NY, USA},
   articleno  = {65},
-  doi        = {10.1145/3007204},
+ % doi        = {10.1145/3007204},
   issue_date = {February 2017},
   numpages   = {45},
   publisher  = {ACM},
@@ -318,7 +353,7 @@ isbn="978-3-319-07076-6"
   volume  = {51},
   number  = {1},
   pages   = {6:1--6:38},
-  doi     = {10.1145/3146025},
+%  doi     = {10.1145/3146025},
 }
 
 @InProceedings{cheng2007,
@@ -328,7 +363,7 @@ isbn="978-3-319-07076-6"
   year      = {2007},
   pages     = {222-230},
   month     = {May},
-  doi       = {10.1109/SP.2007.21},
+%  doi       = {10.1109/SP.2007.21},
   issn      = {1081-6011},
 }
 
@@ -342,7 +377,7 @@ isbn="978-3-319-07076-6"
   address   = {New York, NY, USA},
   publisher = {ACM},
   acmid     = {990062},
-  doi       = {10.1145/990036.990062},
+%  doi       = {10.1145/990036.990062},
   isbn      = {1-58113-872-5},
   keywords  = {OASIS, SECURE, access control, risk, trust},
   location  = {Yorktown Heights, New York, USA},
@@ -371,7 +406,7 @@ isbn="978-3-319-07076-6"
   address   = {New York, NY, USA},
   publisher = {ACM},
   acmid     = {1755719},
-  doi       = {10.1145/1755688.1755719},
+ % doi       = {10.1145/1755688.1755719},
   isbn      = {978-1-60558-936-7},
   keywords  = {access control, fuzzy inference, risk},
   location  = {Beijing, China},
@@ -388,7 +423,7 @@ isbn="978-3-319-07076-6"
   address   = {New York, NY, USA},
   publisher = {ACM},
   acmid     = {1966969},
-  doi       = {10.1145/1966913.1966969},
+%  doi       = {10.1145/1966913.1966969},
   isbn      = {978-1-4503-0564-8},
   keywords  = {access control, healthcare, privacy, risk},
   location  = {Hong Kong, China},
@@ -405,7 +440,7 @@ isbn="978-3-319-07076-6"
   address   = {New York, NY, USA},
   publisher = {ACM},
   acmid     = {3205991},
-  doi       = {10.1145/3205977.3205991},
+%  doi       = {10.1145/3205977.3205991},
   isbn      = {978-1-4503-5666-4},
   keywords  = {access control, healthcare, privacy, risk quantification, topic model},
   location  = {Indianapolis, Indiana, USA},
@@ -425,7 +460,7 @@ isbn="978-3-319-07076-6"
   acmid      = {2480742},
   address    = {New York, NY, USA},
   articleno  = {25},
-  doi        = {10.1145/2480741.2480742},
+%  doi        = {10.1145/2480741.2480742},
   issue_date = {June 2013},
   keywords   = {Game theory, cryptography, intrusion detection system, location privacy, multiparty computation, network security and privacy, revocation, wireless security},
   numpages   = {39},
@@ -445,7 +480,7 @@ isbn="978-3-319-07076-6"
   acmid      = {2635673},
   address    = {New York, NY, USA},
   articleno  = {23},
-  doi        = {10.1145/2635673},
+%  doi        = {10.1145/2635673},
   issue_date = {January 2015},
   keywords   = {Interdependent security, externality, security economics, security games},
   numpages   = {38},
@@ -461,7 +496,7 @@ isbn="978-3-319-07076-6"
   number    = {1},
   pages     = {48--49},
   issn      = {0027-8424},
-  doi       = {10.1073/pnas.36.1.48},
+%  doi       = {10.1073/pnas.36.1.48},
   publisher = {National Academy of Sciences},
 }
 
@@ -478,7 +513,7 @@ isbn="978-3-319-07076-6"
   acmid      = {3057268},
   address    = {New York, NY, USA},
   articleno  = {30},
-  doi        = {10.1145/3057268},
+%  doi        = {10.1145/3057268},
   issue_date = {June 2017},
   keywords   = {Game theory, cyber security, privacy},
   numpages   = {37},
@@ -491,7 +526,7 @@ isbn="978-3-319-07076-6"
   booktitle = {Proceedings of the 2018 {ACM} {SIGSAC} Conference on Computer and Communications Security, {CCS} 2018, Toronto, ON, Canada, October 15-19, 2018},
   year      = {2018},
   pages     = {2163--2165},
-  doi       = {10.1145/3243734.3264421},
+%  doi       = {10.1145/3243734.3264421},
 }
 
 @InProceedings{hu2014,
@@ -504,7 +539,7 @@ isbn="978-3-319-07076-6"
   address   = {New York, NY, USA},
   publisher = {ACM},
   acmid     = {2613097},
-  doi       = {10.1145/2613087.2613097},
+%%  doi       = {10.1145/2613087.2613097},
   isbn      = {978-1-4503-2939-2},
   keywords  = {game theory, multiparty access control, social networks},
   location  = {London, Ontario, Canada},
@@ -521,7 +556,7 @@ isbn="978-3-319-07076-6"
   address   = {New York, NY, USA},
   publisher = {ACM},
   acmid     = {2660341},
-  doi       = {10.1145/2660267.2660341},
+ % doi       = {10.1145/2660267.2660341},
   isbn      = {978-1-4503-2957-6},
   keywords  = {access control, audit, context, data mining, decision support},
   location  = {Scottsdale, Arizona, USA},
@@ -540,7 +575,7 @@ isbn="978-3-319-07076-6"
   issn       = {0167-4048},
   acmid      = {2776264},
   address    = {Oxford, UK, UK},
-  doi        = {10.1016/j.cose.2014.12.001},
+ % doi        = {10.1016/j.cose.2014.12.001},
   issue_date = {March 2015},
   numpages   = {15},
   publisher  = {Elsevier Advanced Technology Publications},
@@ -555,7 +590,7 @@ isbn="978-3-319-07076-6"
   number  = {7},
   pages   = {862-872},
   issn    = {1751-8628},
-  doi     = {10.1049/iet-com.2015.0684},
+%  doi     = {10.1049/iet-com.2015.0684},
 }
 
 @Article{gao2018,
@@ -565,7 +600,7 @@ isbn="978-3-319-07076-6"
   year    = {2018},
   pages   = {1-1},
   issn    = {2168-7161},
-  doi     = {10.1109/TCC.2016.2632110},
+%  doi     = {10.1109/TCC.2016.2632110},
 }
 
 @Article{helil2017,
@@ -576,7 +611,7 @@ isbn="978-3-319-07076-6"
   volume  = {307},
   pages   = {299 - 310},
   issn    = {0096-3003},
-  doi     = {10.1016/j.amc.2017.03.006},
+%  doi     = {10.1016/j.amc.2017.03.006},
 }
 
 @Article{wang2019,
@@ -588,11 +623,10 @@ isbn="978-3-319-07076-6"
   number         = {4},
   issn           = {2078-2489},
   article-number = {132},
-  doi            = {10.3390/info10040132},
+%  doi            = {10.3390/info10040132},
   keywords       = {rank5},
   timestamp      = {2019-04-28},
 }
-
 
 @InProceedings{kandala2011,
   author    = {Savith Kandala and Ravi Sandhu and Venkata Bhamidipati},
@@ -601,9 +635,8 @@ isbn="978-3-319-07076-6"
   year      = {2011},
   pages     = {236-241},
   month     = {Aug},
-  doi       = {10.1109/ARES.2011.41},
+%  doi       = {10.1109/ARES.2011.41},
 }
-
 
 @InProceedings{diep2007,
   author    = {Nguyen Ngoc Diep and Le Xuan Hung and Yonil Zhung and Sungyoung Lee and Young-koo Lee and Heejo Lee},
@@ -643,7 +676,7 @@ isbn="978-3-319-07076-6"
   pages   = {472-486},
   month   = {First},
   issn    = {1553-877X},
-  doi     = {10.1109/SURV.2012.062612.00056},
+%  doi     = {10.1109/SURV.2012.062612.00056},
 }
 
 @Article{manshaei2013a,
@@ -654,29 +687,20 @@ isbn="978-3-319-07076-6"
   volume  = {45},
   number  = {3},
   pages   = {25:1--25:39},
-  doi     = {10.1145/2480741.2480742},
+%  doi     = {10.1145/2480741.2480742},
 }
 
 @Article{do2017a,
   author  = {Cuong T. Do and Nguyen H. Tran and Choong Seon Hong and Charles A. Kamhoua and Kevin A. Kwiat and Erik Blasch and Shaolei Ren and Niki Pissinou and Sundaraja Sitharama Iyengar},
   title   = {Game Theory for Cyber Security and Privacy},
-  journal = {{ACM} Comput. Surv.},
+  journal = {ACM Computing Surveys (CSUR)},
   year    = {2017},
   volume  = {50},
   number  = {2},
   pages   = {30:1--30:37},
-  doi     = {10.1145/3057268},
+%  doi     = {10.1145/3057268},
 }
 
-@Article{csiszar2004,
-  author  = {Imre Csisz{\'{a}}r and Paul C. Shields},
-  title   = {Information Theory and Statistics: {A} Tutorial},
-  journal = {Foundations and Trends in Communications and Information Theory},
-  year    = {2004},
-  volume  = {1},
-  number  = {4},
-  doi     = {10.1561/0100000004},
-}
 
 @Article{stone2018,
   author        = {James V. Stone},
@@ -686,7 +710,7 @@ isbn="978-3-319-07076-6"
   volume        = {abs/1802.05968},
   archiveprefix = {arXiv},
   eprint        = {1802.05968},
-  url           = {http://arxiv.org/abs/1802.05968},
+%  url           = {http://arxiv.org/abs/1802.05968},
 }
 
 @Article{wagner2018,
@@ -697,7 +721,7 @@ isbn="978-3-319-07076-6"
   volume  = {51},
   number  = {3},
   pages   = {57:1--57:38},
-  doi     = {10.1145/3168389},
+%  doi     = {10.1145/3168389},
 }
 
 @TechReport{mcgraw2009,
@@ -708,4 +732,13 @@ isbn="978-3-319-07076-6"
   timestamp   = {2019-06-12},
 }
 
+@article{wang2015,
+  title={网络群体行为的演化博弈模型与分析方法},
+  author={王元卓 and 于建业 and 邱雯 and 沈华伟 and 程学旗 and 林闯},
+  journal={计算机学报},
+  volume={38},
+  number={2},
+  pages={282-300},
+  year={2015},
+}
 @Comment{jabref-meta: databaseType:bibtex;}
